# chadavit

./: .gitignore  HOW_TO_USE.ipynb  README.md  main_attn.py  main_knn.py  main_linear.py  main_pretrain.py  main_regression.py  main_umap.py  pyproject.toml
scripts/knn/bbbc048/: dino_chada_vit_moyen.yaml
scripts/knn/cyclops/: dino_chada_vit_moyen.yaml
scripts/linear/bbbc048/: dino_chada_vit_moyen.yaml
scripts/linear/bloodmnist/: dino_chada_vit_moyen.yaml
scripts/linear/cyclops/: dino_chada_vit_moyen.yaml
scripts/regression/transloc/: dino_chada_vit_moyen.yaml
src/: __init__.py
src/args/: __init__.py  attn.py  knn.py  linear.py  pretrain.py  regression.py  umap.py
src/backbones/: __init__.py
src/backbones/vit/: __init__.py  chada_vit.py  vit.py  vit_attn_viz.py
src/data/: __init__.py  channels_strategies.py  classification_dataloader.py  custom_datasets.py  custom_transforms.py  dali_dataloader.py  generate_train_val_test_csv_files.py  pretrain_dataloader.py  temp_dali_fix.py  tmp.py
src/data/splits/bbbc048/: train.csv  val.csv
src/data/splits/cyclops/: train.csv  val.csv
src/data/splits/translocation/: single_ratio_images_train.csv  single_ratio_images_val.csv
src/losses/: __init__.py
src/methods/: __init__.py  base.py  dino.py  linear.py  regression.py
src/utils/: __init__.py  auto_resumer.py  auto_umap.py  checkpointer.py  generate_low_shot_file.py  knn.py  log_offline_wandb.py  metrics.py  misc.py  multiprocessing_wrapper.py  return_all_tokens_vit_hook.py  slurm_logger.py  spherize.py  vizualize_aug.py
