[tool.poetry]
name = "chada-vit"
version = "0.1.0"
description = "Channel Adaptive Vision Transformer repository"
authors = ["Nicolas Bourriez <nicolas.bourriez@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytorch-lightning = "2.0.2"
scipy = "^1.11.4"
albumentations = "1.3.1"
h5py = "3.9.0"
hydra-core = "1.3.2"
lightning-utilities = "0.9.0"
matplotlib = "3.7.1"
numba = "0.57.0"
numpy = "1.24.3"
omegaconf = "2.3.0"
opencv-python = "4.7.0.72"
pandas = "1.5.3"
pillow = "9.4.0"
pip = "23.1.2"
requests = "2.28.2"
rich = "13.4.2"
scikit-image = "0.19.2"
scikit-learn = "1.2.2"
seaborn = "0.12.2"
tifffile = "2021.7.2"
timm = {git = "https://github.com/huggingface/pytorch-image-models.git", rev = "fc5d705b83fef6f89c7c090903a3ff6fbd7fd0dd"}
toml = "0.10.2"
torch = "2.0.0"
torchmetrics = "0.10.0"
torchsummary = "1.5.1"
torchvision = "0.15.1"
tqdm = "4.65.0"
umap-learn = "0.5.3"
wandb = "0.15.4"
watchdog = "3.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"